refactor: remove unused payment-related converters and event classes
- Deleted `PaymentAttemptsJsonConverter`, `PaymentIntentJsonConverter`, `PricingSummaryJsonConverter`, and `PaymentCompletedEvent` as they are no longer necessary.
- Updated references to removed converters in `EventCheckoutSessionEntity` and `ProductCheckoutSessionEntity`.
- Introduced `PricingDetailsJsonConverter` from the financial processing package as a replacement.
- Enhanced `EventCheckoutSessionEntity` and `ProductCheckoutSessionEntity` with additional fields, lifecycle methods, and default values for better payment flow handling.